--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"react-icons": "^4.6.0",
 		"react-router-dom": "^6.4.2",
 		"react-scripts": "5.0.1",
+		"react-swiper": "^0.1.5",
 		"sass": "^1.55.0",
+		"swiper": "^8.4.4",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
